# vigas

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vigas.sln  vigas.vcxproj  vigas.vcxproj.filters
doc/: genesis_plus_gx.md
inc/core/: audio_subsystem.h  bitmap.h  boot_rom.h  core_config.h  core_config_t.h  ext.h  external_t.h  framebuffer.h  framebuffer_t.h  genesis.h  hvc.h  io_ctrl.h  io_reg.h  loadrom.h  macros.h  mem68k.h  memz80.h  pico_current.h  region_code.h  rominfo.h  romtype.h  shared.h  snd.h  state.h  system.h  system_bios.h  system_clock.h  system_cycle.h  system_hardware.h  system_hw.h  system_model.h  system_timing.h  types.h  vdp_ctrl.h  vdp_render.h  viewport.h  viewport_t.h  vram.h  work_ram.h  zbank.h  (+4 more)
inc/core/cart_hw/: cart_hw_t.h  eeprom_93c.h  hw_addon.h  lock_on_type.h  md_cart.h  md_cart_t.h  megasd.h  sms_cart.h  special_hw_md.h  special_hw_sms.h  sram.h
inc/core/cart_hw/svp/: svp.h
inc/core/cd_hw/: cd_cart.h  cd_cart_t.h  cd_hw_t.h  cdc.h  cdc_t.h  cdd.h  cdd_t.h  chan_t.h  gfx.h  gfx_t.h  pcm.h  pcm_t.h  scd.h  toc_t.h  track_t.h
inc/core/crypto/: crypto_crc32.h
inc/core/input_hw/: input.h  input_config_t.h  paddle.h
inc/core/m68k/: m68k.h  m68kcpu.h  m68kops.h
inc/core/ntsc/: md_ntsc.h  md_ntsc_impl.h  sms_ntsc.h  sms_ntsc_impl.h
inc/core/sound/: blip_buf.h  psg.h  sound.h  ym3438.h
inc/core/vdp/: clip_t.h  object_info_t.h  pixel.h
inc/core/z80/: osd_cpu.h  z80.h
inc/gpgx/: g_audio_renderer.h  g_fm_synthesizer.h  g_hid_system.h  g_psg.h  g_ym2413.h  g_ym2612.h  g_ym3438.h  g_z80.h  gpgx.h
inc/gpgx/audio/: audio_renderer.h  blip_buffer.h
inc/gpgx/audio/effect/: equalizer_3band.h  fm_synthesizer.h  fm_synthesizer_base.h  null_fm_synthesizer.h
inc/gpgx/cpu/z80/: z80.h  z80_line_state.h  z80_macro.h  z80_register_pair.h  z80_table_index.h
inc/gpgx/hid/: controller.h  controller_type.h  device.h  device_type.h  hid_system.h  input.h
inc/gpgx/ic/sn76489/: sn76489.h  sn76489_type.h
inc/gpgx/ic/ym2413/: opll_ch.h  opll_slot.h  ym2413.h
inc/gpgx/ic/ym2612/: fm_3slot.h  fm_ch.h  fm_opn.h  fm_slot.h  fm_st.h  ym2612.h  ym2612_type.h
inc/gpgx/ic/ym3438/: opn2_context.h  ym3438.h  ym3438_mode.h
inc/gpgx/ppu/vdp/: bg_layer_renderer.h  bg_pattern_cache_updater.h  inv_bg_layer_renderer.h  m0_bg_layer_renderer.h  m1_bg_layer_renderer.h  m1x_bg_layer_renderer.h  m2_bg_layer_renderer.h  m3_bg_layer_renderer.h  m3x_bg_layer_renderer.h  m4_bg_layer_renderer.h  m4_bg_pattern_cache_updater.h  m4_satb_parser.h  m4_sprite_layer_renderer.h  m4_sprite_tile_drawer.h  m4_zoomed_sprite_tile_drawer.h  m5_bg_column_drawer.h  m5_bg_layer_renderer.h  m5_bg_pattern_cache_updater.h  m5_color_palette_updater.h  m5_im2_bg_column_drawer.h  m5_im2_bg_layer_renderer.h  m5_im2_sprite_layer_renderer.h  m5_im2_ste_sprite_layer_renderer.h  m5_im2_vs_bg_layer_renderer.h  m5_satb_parser.h  m5_sprite_layer_renderer.h  m5_sprite_tile_drawer.h  m5_ste_sprite_layer_renderer.h  m5_vs_bg_layer_renderer.h  mx_color_palette_updater.h  satb_parser.h  sprite_layer_renderer.h  tms_satb_parser.h  tms_sprite_layer_renderer.h  tms_sprite_tile_drawer.h  tms_zoomed_sprite_tile_drawer.h
inc/gpgx/sound/: blip_buffer.h  equalizer_3band.h  sn76489.h
inc/gpgx/sound/ym2413/: opll_ch.h  opll_slot.h  ym2413.h
inc/gpgx/sound/ym2612/: fm_3slot.h  fm_ch.h  fm_opn.h  fm_slot.h  fm_st.h  ym2612.h  ym2612_type.h
inc/gpgx/sound/ym3438/: opn2_context.h  ym3438.h  ym3438_mode.h
inc/gpgx/vgs/: vdp_irq_handler_z80.h
lib/zlib/lib/x64/: libz-static_d.lib
src/core/: audio_subsystem.cpp  bitmap.cpp  boot_rom.cpp  core_config.cpp  ext.cpp  framebuffer.cpp  genesis.cpp  io_ctrl.cpp  io_reg.cpp  loadrom.cpp  mem68k.cpp  membnk.cpp  memz80.cpp  pico_current.cpp  region_code.cpp  rominfo.cpp  romtype.cpp  snd.cpp  state.cpp  system.cpp  system_bios.cpp  system_clock.cpp  system_cycle.cpp  system_hardware.cpp  system_hw.cpp  vdp_ctrl.cpp  vdp_render.cpp  viewport.cpp  vram.cpp  work_ram.cpp  zbank.cpp  zbank_memory_map.cpp  zram.cpp  zstate.cpp
src/core/cart_hw/: areplay.cpp  eeprom_93c.cpp  eeprom_i2c.cpp  eeprom_spi.cpp  ggenie.cpp  md_cart.cpp  megasd.cpp  sms_cart.cpp  sram.cpp
src/core/cart_hw/svp/: ssp16.cpp  svp.cpp
src/core/cd_hw/: cd_cart.cpp  cdc.cpp  cdd.cpp  gfx.cpp  pcm.cpp  scd.cpp
src/core/crypto/: crypto_crc32.cpp
src/core/debug/: cpuhook.cpp
src/core/input_hw/: activator.cpp  gamepad.cpp  graphic_board.cpp  input.cpp  lightgun.cpp  mouse.cpp  paddle.cpp  sportspad.cpp  teamplayer.cpp  terebi_oekaki.cpp  xe_1ap.cpp
src/core/m68k/: m68kcpu.cpp  s68kcpu.cpp
src/core/ntsc/: md_ntsc.cpp  sms_ntsc.cpp
src/core/sound/: blip_buf.cpp  eq.cpp  psg.cpp  sound.cpp  ym2413.cpp  ym2612.cpp  ym3438.cpp
src/core/z80/: z80.cpp
src/gpgx/: g_audio_renderer.cpp  g_fm_synthesizer.cpp  g_hid_system.cpp  g_psg.cpp  g_ym2413.cpp  g_ym2612.cpp  g_ym3438.cpp  g_z80.cpp  gpgx.cpp
src/gpgx/audio/: audio_renderer.cpp  blip_buffer.cpp
src/gpgx/audio/effect/: equalizer_3band.cpp  fm_synthesizer_base.cpp  null_fm_synthesizer.cpp
src/gpgx/cpu/z80/: z80.cpp  z80_context.cpp  z80_cycles.cpp  z80_opcodes.cpp  z80_operations.cpp
src/gpgx/hid/: controller.cpp  device.cpp  hid_system.cpp
src/gpgx/ic/sn76489/: sn76489.cpp
src/gpgx/ic/ym2413/: ym2413.cpp
src/gpgx/ic/ym2612/: ym2612.cpp
src/gpgx/ic/ym3438/: ym3438.cpp
src/gpgx/ppu/vdp/: inv_bg_layer_renderer.cpp  m0_bg_layer_renderer.cpp  m1_bg_layer_renderer.cpp  m1x_bg_layer_renderer.cpp  m2_bg_layer_renderer.cpp  m3_bg_layer_renderer.cpp  m3x_bg_layer_renderer.cpp  m4_bg_layer_renderer.cpp  m4_bg_pattern_cache_updater.cpp  m4_satb_parser.cpp  m4_sprite_layer_renderer.cpp  m4_sprite_tile_drawer.cpp  m4_zoomed_sprite_tile_drawer.cpp  m5_bg_column_drawer.cpp  m5_bg_layer_renderer.cpp  m5_bg_pattern_cache_updater.cpp  m5_color_palette_updater.cpp  m5_im2_bg_column_drawer.cpp  m5_im2_bg_layer_renderer.cpp  m5_im2_sprite_layer_renderer.cpp  m5_im2_ste_sprite_layer_renderer.cpp  m5_im2_vs_bg_layer_renderer.cpp  (+10 more)
src/gpgx/sound/: blip_buffer.cpp  equalizer_3band.cpp  sn76489.cpp
src/gpgx/vgs/: vdp_irq_handler_z80.cpp
(+3 files in other folders)
